--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 html {
     height: 100%;
     background-color: #87ceeb;
-    
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -15,6 +16,17 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+#header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #004b9c;
+    font-weight: 900;
+    font-size: 24px;
 }
 
 #content {
